# qvault

./: Dockerfile  Makefile  README.md  dev_container.sh
qvault/: Cargo.toml
qvault/src/: main.rs  qvault_cmd.rs  qvault_history.rs  qvault_log.rs  qvault_tui.rs  sample.rs
qvault/src/qvault_cmd/: qvault_ai.rs  qvault_search.rs
