[package]
name = "qvault"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
termion = "4.0.3"
tui = { version = "0.19", features = ["termion"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.10.0"
chrono = "0.4"
